--- a/histora-care/src/global.scss
+++ b/histora-care/src/global.scss
@@ -1763,6 +1763,7 @@ ion-modal.tracking-sheet-modal {
     width: 40px;
     height: 4px;
     margin-top: 12px;
+    margin-bottom: 16px;
   }
 }
 
